--- a/Final/Final_Report_Assignment_1_submit.ipynb
+++ b/Final/Final_Report_Assignment_1_submit.ipynb
@@ -919,7 +919,7 @@
         "Secondly, Grid Search proposes a maximum depth of 4 meaning that the length of the paths from the root of the tree to the leaf is no greater than 4.\n",
         "To see whether the parameter tuning increases the accuracy score, the DTC was applied with and without adjusted parameters. \n",
         "Given the same data and attributes which were already used with the SVC, the DTC scores an accuracy between 28% and 29% at most.\n",
-        "After applying a maximum depth of 4 and an entropy criterion, the accuracy indeed increases. Given the optimized parameters, the DTC escalates to 32%, which still less than the SVC score."
+        "After applying a maximum depth of 4 and an entropy criterion, the accuracy indeed increases. Given the optimized parameters, the DTC escalates to 32%, which is still less than the SVC score."
       ]
     },
     {
